# Pof-MMORPG

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO.txt
dockerfiles/chat_server/: Dockerfile
dockerfiles/database/: Dockerfile  dbinit.sql
dockerfiles/instance/: Dockerfile
dockerfiles/server/: Dockerfile
include/: glad.h
lib/: glfw3.lib
src/chat_server/: client.cpp  client.h  crypto.cpp  crypto.h  ioc.h  main.cpp  rooms.cpp  rooms.h  server.cpp  server.h  shutdown.cpp  shutdown.h  token.h
src/client/: chat.h  client.cpp  client.h  crypto.cpp  crypto.h  editor.cpp  editor.h  game.cpp  game.h  graphics.cpp  graphics.h  ioc.h  main.cpp  manipulator.cpp  manipulator.h  shutdown.cpp  shutdown.h  system.cpp  system.h
src/common/: entity.cpp  entity.h  user_card.cpp  user_card.h
src/components/: camera.cpp  camera.h  collider.cpp  collider.h  component.cpp  component.h  light.cpp  light.h  meshFilter.cpp  meshFilter.h  meshLoader.cpp  meshLoader.h  meshRenderer.cpp  meshRenderer.h  phys_collider.cpp  phys_collider.h  physical.cpp  physical.h  solid_object.cpp  solid_object.h
src/controls/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/core/: constants.h  exceptions.cpp  exceptions.h  time_values.cpp  utils.cpp  utils.h
src/graphics/: camera.cpp  camera.h  component.cpp  component.h  constants.h  context_setup.cpp  context_setup.h  gl_context.cpp  gl_context.h  gl_functions.cpp  gl_functions.h  glad.c  gpu.cpp  gpu.h  graphics_files.h  keyboard.cpp  keyboard.h  keyboard_functions.cpp  keyboard_functions.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  mouse.cpp  mouse.h  objects.cpp  objects.h  renderLayer.cpp  renderLayer.h  scene.cpp  scene.h  shader.cpp  shader.h  transform.cpp  transform.h  (+4 more)
src/graphics/assets/objects/: cube.mtl  kaguya.mtl  tree.mtl
src/graphics/assets/scenes/: test.json
src/graphics/assets/shaders/: model.fs  model.vs
src/graphics/common/: mesh.cpp  mesh.h  objects.cpp  objects.h  scene.cpp  scene.h  time.cpp  time.h  transform.cpp
src/graphics/components/: camera.cpp  camera.h  component.cpp  light.cpp  light.h  meshLoader.cpp  meshLoader.h  meshRenderer.cpp  meshRenderer.h
src/graphics/culling/: frustrumCulling.cpp  frustrumCulling.h
src/graphics/model/: material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h
src/graphics/objects/: cube.mtl
src/graphics/render/: gl_context.cpp  gl_context.h  gpu.cpp  gpu.h  material.cpp  material.h  shader.cpp  shader.h
src/graphics/scenes/: test.json
src/graphics/shaders/: model.fragmentshader  model.fs  model.vertexshader  model.vs
src/include/: common_macro.h  glad.h  maps.h  nuklear.h  nuklear_glfw_gl4.h  regions.h
src/instance/: chat_client.cpp  chat_client.h  client.cpp  client.h  connection.h  crypto.cpp  crypto.h  game.cpp  game.h  ioc.h  main.cpp  misc.cpp  misc.h  server.cpp  server.h  shutdown.cpp  shutdown.h  token.h
src/lib/: call.cpp  call.h  chat.cpp  chat.h  crypto.cpp  crypto.h  database.cpp  database.h  log.cpp  log.h  nuklear.c  nuklear.cpp  nuklear.h  protocol.cpp  protocol.h  rcon.cpp  rcon.h  uuid.cpp  uuid.h
src/manipulator/: crypto.cpp  crypto.h  main.cpp  manipulator.cpp  manipulator.h
src/phys/: aabb.cpp  aabb.h  capsule.cpp  capsule.h  collisions.cpp  collisions.h  container.cpp  container.h  environment.cpp  environment.h  impulse.cpp  impulse.h  octree.cpp  octree.h  slicing.cpp  slicing.h  vectoring.h
src/scene/: objects.cpp  objects.h  oid.cpp  oid.h  scene.cpp  scene.h  transform.cpp  transform.h
src/server/: client.cpp  client.h  crypto.cpp  crypto.h  hosts.cpp  hosts.h  instances.cpp  instances.h  ioc.h  main.cpp  server.cpp  server.h  shutdown.cpp  shutdown.h  token.h
src/test/: call_test.cpp  crypto_test.cpp  phys_test.cpp  scene_test.cpp  trie_test.cpp  world_structure_test.cpp
src/ui/: chat.cpp  chat.h  console.cpp  console.h  scene_viewer.cpp  scene_viewer.h  ui.cpp  ui.h  utils.cpp  utils.h
src/world_structure/: object.cpp  object.h  position.h  world.cpp  world.h
x64/Release/: Graphics Engine.iobj  Graphics Engine.ipdb
